# QuantX_assignment

./: CMakeLists.txt  README.md
include/: Logger.h  configLoader.h
resources/: config.cfg
src/: Logger.cpp  configLoader.cpp  main.cpp
